--- a/Interface/app/views/requests/new.html.erb
+++ b/Interface/app/views/requests/new.html.erb
@@ -1,17 +1,8 @@
 <% provide(:title,"Submit Application")%>
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Submit Application | UL Housing</title>
-	</head>
-	<body>
-		<h1>Submit Room Request</h1>
+
+<div class="center jumbotron">
+	<h1>Submit Room Request</h1>
 
 		<%= render 'form' %>
 
-		<%= link_to 'Back', requests_path %>
-		<a <!-- 
-      		The above button will be changed to link to administrator log in.
- 			-->
-	</body>
-</html>
+</div>
