--- a/Interface/app/views/home_controller/home.html.erb
+++ b/Interface/app/views/home_controller/home.html.erb
@@ -1,10 +1,13 @@
 <% provide(:title,"Home")%>
 <!DOCTYPE html>
 <html>
+	<head>
+		<title><%= full_title(yield(:title)) %></title>
+	</head>
   <body>
-    <h1>Sample App</h1>
-    <p>
-      Filler text right here.
-    </p>
+    <div class="center jumbotron">
+    	<h1>Room Request Station</h1>
+    	<%= link_to "Submit Request", '#', class: "btn btn-large btn-primary" %>
+    </div>
   </body>
 </html>
