--- a/Interface/app/views/user_notifier/response_email.html.erb
+++ b/Interface/app/views/user_notifier/response_email.html.erb
@@ -1,5 +1,14 @@
-<h1>UserNotifier#response_email</h1>
+<h1>Notice</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_notifier/response_email.html.erb
+Hello <%= @request.clid %>,
+<br />
+A request has been made with your CLID to move into:
+<br />
+Building: <%= @request.building %> <br />
+Room: <%= @request.room %>
+<br /> <br />
+Confirm this request by selecting the following link:<br />
+<%= link_to 'Confirm', createreq_url %>
+<comment>Link above doesn't work.'</comment>
 </p>
