--- a/Interface/app/views/user_notifier/denial_email.text.erb
+++ b/Interface/app/views/user_notifier/denial_email.text.erb
@@ -1,3 +1,8 @@
 UserNotifier#denial_email
 
-<%= @greeting %>, find me in app/views/user_notifier/denial_email.text.erb
+<%= @request.clid %>, your request for changing rooms to:
+  <br/> <br />
+  Building: <%= @request.building %><br />
+  Room: <%= @request.room %> 
+  
+  Has been denied.
