--- a/Interface/app/views/requests/index.html.erb
+++ b/Interface/app/views/requests/index.html.erb
@@ -15,12 +15,11 @@
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-        <td><%= request.clid %></td>
-        <td><%= request.building %></td>
+        <td><%= request.clid %></td>  
+        <td><%= request.building %></td>   
         <td><%= request.room %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Accept', request, method: :delete, data: { confirm: 'Accept this request?' } %></td>
+        <td><%= link_to 'Deny', request, method: :delete, data: {confirm: 'Deny this request?'} %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +27,3 @@
 
 <br>
 
-<%= link_to 'New Request', new_request_path %>
