Setting up production

--- a/InterfaceRedux/app/views/administrators/new.html.erb
+++ b/InterfaceRedux/app/views/administrators/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Administrator</h1>
 
-<%= render 'form' %>
+<div class="center jumbotron"><%= render 'form' %></div>
 
-<%= link_to 'Back', administrators_path %>
+<%= link_to 'Back', requests_path %>
