--- a/InterfaceRedux/app/assets/stylesheets/custom.css.scss
+++ b/InterfaceRedux/app/assets/stylesheets/custom.css.scss
@@ -87,5 +87,30 @@ p {
   @include box_sizing;
 }
 
+//For forms
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 25%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
 
+input {
+  height: auto !important;
+}
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
 
