--- a/InterfaceRedux/app/views/requests/_form.html.erb
+++ b/InterfaceRedux/app/views/requests/_form.html.erb
@@ -1,34 +1,31 @@
-<%= form_for(@request) do |f| %>
-  <% if @request.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@request.errors.count, "error") %> prohibited this request from being saved:</h2>
-
-      <ul>
-      <% @request.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :clid %><br>
-    <%= f.text_field :clid %>
-  </div>
-  <div class="field">
-    <%= f.label :gender %> (M/F)<br>
-    <%= f.text_field :gender %>
-  </div>
-  <div class="field">
-    <%= f.label :building %><br>
-    <%= f.select :building, options_for_select(%w(Conference\ Center Harris\ Hall Legacy\ Park Baker\ Hall Bonin\ Hall 
-    	Coronna\ Hall Huger\ Hall)) %>
-  </div>
-  <div class="field">
-    <%= f.label :room %><br>
-    <%= f.text_field :room %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<div class="row">
+	<div class="col-mid-2">
+		<%= form_for(@request) do |f| %>
+		  <%= render 'shared/error_messages'%>
+		
+		  <div class="field">
+		    <%= f.label :clid %><br>
+		    <%= f.text_field :clid %>
+		  </div>
+		  <div class="field">
+		    <%= f.label :gender %><br>
+		    <%= f.label :gender, "Male", :value => "male" %>
+		    <%= f.radio_button :gender, "male"%> <br />
+		    <%= f.label :gender, "Female", :value => "female" %>
+		    <%= f.radio_button :gender, "female"%>
+		  </div>
+		  <div class="field">
+		    <%= f.label :building %><br>
+		    <%= f.select :building, options_for_select(%w(Conference\ Center Harris\ Hall Legacy\ Park Baker\ Hall Bonin\ Hall 
+		    	Coronna\ Hall Huger\ Hall)) %>
+		  </div>
+		  <div class="field">
+		    <%= f.label :room %><br>
+		    <%= f.text_field :room %>
+		  </div>
+		  <div class="actions">
+		    <%= f.submit "Send", class: "btn btn-primary" %>
+		  </div>
+		<% end %>
+	</div>
+</div>
