--- a/InterfaceRedux/app/views/requests/index.html.erb
+++ b/InterfaceRedux/app/views/requests/index.html.erb
@@ -18,20 +18,21 @@
 
   <tbody>
     <% @requests.each do |request| %>
-      <tr>
-        <td><%= request.clid %></td>
-        <td><%= request.gender %></td>
-        <td></td>
-        <td></td>
-        <td><%= request.building %></td>
-        <td><%= request.room %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+		<% if request.activated? %>
+			<tr>
+	        <td><%= request.clid %></td>
+	        <td><%= request.gender %></td>
+	        <td></td>
+	        <td></td>
+	        <td><%= request.building %></td>
+	        <td><%= request.room %></td>
+	        <td><%= button_to 'Accept', requestaccept_path(request), method: :delete, data: {confirm: "Accept this request?"}%></td>
+	        <td><%= button_to 'Destroy', requestdeny_path(request), method: :delete, data: { confirm: 'Deny this request?' } %></td>
+	      </tr>      
+	      <%end %>
     <% end %>
   </tbody>
 </table>
 <%= will_paginate %>
 <br>
-
+<%= link_to 'New Administrator', new_administrator_path,class="btn" %>
