--- a/InterfaceRedux/app/views/requests/index.html.erb
+++ b/InterfaceRedux/app/views/requests/index.html.erb
@@ -19,15 +19,22 @@
   <tbody>
     <% @requests.each do |request| %>
 		<% if request.activated? %>
+			<%= @student = Student.find_by(clid: request.clid)%>
 			<tr>
 	        <td><%= request.clid %></td>
 	        <td><%= request.gender %></td>
-	        <td></td>
-	        <td></td>
+	        <% if !@student.nil? %>
+	        	<td><%= @student.building%></td>
+	        	<td><%= @student.roomid %></td>
+	        <!-- If student is nil, display nothing to avoid errors. -->
+	        <%else %>
+	        	<td></td>
+	        	<td></td>
+	        <%end%>
 	        <td><%= request.building %></td>
 	        <td><%= request.room %></td>
-	        <td><%= button_to 'Accept', requestaccept_path(request), method: :delete, data: {confirm: "Accept this request?"}%></td>
-	        <td><%= button_to 'Destroy', requestdeny_path(request), method: :delete, data: { confirm: 'Deny this request?' } %></td>
+	        <td><%= link_to 'Accept', deciderequest_path(request, :accept => true, :id => request.id)  %></td>
+			<td><%= link_to 'Deny', deciderequest_path(request, :accept => false, :id => request.id) %></td>
 	      </tr>      
 	      <%end %>
     <% end %>
@@ -35,4 +42,4 @@
 </table>
 <%= will_paginate %>
 <br>
-<%= link_to 'New Administrator', new_administrator_path,class="btn" %>
+<%= link_to 'New Administrator', new_administrator_path,class:"btn" %>
